--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
         </li>
         <li>
-          <a href="https://drive.google.com/file/d/1e2GkVc8AICcnUv5N1lrECumqJgqSyCb8/view?usp=sharing">
+          <a href="https://drive.google.com/file/d/11cKadCKEl8SzQ4wfEhmBq-OCgvtkCQKG">
             <img src="img/curriculum-vitae.svg" alt="Illustration représentant un CV">
             <p>Mon CV</p>
           </a>
