--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Retrouvez mes informations de contact" />
-  <title>Philippe Wanquetin (@nihylin) - Contactez moi !</title>
+  <title>Philippe Wanquetin (@nihylin) - Informations de contact</title>
   <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Philippe Wanquetin">
   <link rel="icon" href="favicon.ico" type="image/gif">
@@ -57,46 +57,8 @@
             <p>LinkedIn</p>
           </a>
         </li>
-        <li>
-          <a href="https://discordapp.com/users/203637192491401216/">
-            <img src="img/discord.svg" alt="Logo de Discord">
-            <p>Discord</p>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.facebook.com/philippe.wanquetin/">
-            <img src="img/facebook.svg" alt="Logo de Facebook">
-            <p>Facebook</p>
-          </a>
-        </li>
-        <li>
-          <a href="http://sptfy.com/aquarelle">
-            <img src="img/aquarelle.svg" alt="Illustration représentant une playlist Spotify">
-            <p>Mes musiques préférées 🎶</p>
-          </a>
-        </li>
       </ul>
       <ul class="secondList">
-        <li>
-          <a href="mailto:philippe.wanquetin@gmail.com">
-            <svg viewBox="0 0 24 24">
-              <desc>Mail</desc>
-              <path
-                d="M18.821 20.5H5.179A3.683 3.683 0 0 1 1.5 16.821V7.179A3.683 3.683 0 0 1 5.179 3.5h13.642A3.683 3.683 0 0 1 22.5 7.179v9.642a3.683 3.683 0 0 1-3.679 3.679ZM5.179 4.5A2.682 2.682 0 0 0 2.5 7.179v9.642A2.682 2.682 0 0 0 5.179 19.5h13.642a2.682 2.682 0 0 0 2.679-2.679V7.179A2.682 2.682 0 0 0 18.821 4.5Z" />
-              <path d="M12 14.209a.5.5 0 0 1-.346-.138L4.286 7.028a.5.5 0 0 1 .691-.723L12 13.018l7.023-6.713a.5.5 0 1 1 .691.723l-7.368 7.043a.5.5 0 0 1-.346.138Z" />
-              <path d="M4.7 17.833a.5.5 0 0 1-.347-.86l5.54-5.31a.5.5 0 0 1 .692.722l-5.537 5.309a.5.5 0 0 1-.348.139Zm14.6-.001a.5.5 0 0 1-.346-.139l-5.538-5.308a.5.5 0 0 1 .692-.722l5.538 5.308a.5.5 0 0 1-.346.861Z" />
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/philippewanquetin/">
-            <svg viewBox="0 0 24 24">
-              <desc>LinkedIn</desc>
-              <path
-                d="M4.425 1.671A2.738 2.738 0 0 0 1.5 4.4a2.71 2.71 0 0 0 2.869 2.728H4.4a2.734 2.734 0 1 0 .028-5.457ZM4.4 6.128h-.031a1.736 1.736 0 1 1 .056-3.457A1.737 1.737 0 1 1 4.4 6.128Zm2.141 2.303H2.253a.5.5 0 0 0-.5.5v12.9a.5.5 0 0 0 .5.5h4.288a.5.5 0 0 0 .5-.5v-12.9a.5.5 0 0 0-.5-.5Zm-.5 12.9H2.753v-11.9h3.288ZM17.064 8.128A4.691 4.691 0 0 0 13.7 9.362v-.431a.5.5 0 0 0-.5-.5H8.914a.5.5 0 0 0-.5.523c.053 1.183 0 12.756 0 12.873a.5.5 0 0 0 .5.5H13.2a.5.5 0 0 0 .5-.5v-7.2a2.749 2.749 0 0 1 .1-.86 1.869 1.869 0 0 1 1.737-1.254c.413 0 1.671 0 1.671 2.417v6.9a.5.5 0 0 0 .5.5H22a.5.5 0 0 0 .5-.5v-7.4c0-3.945-2.033-6.302-5.436-6.302Zm4.436 13.2h-3.287v-6.4c0-2.973-1.673-3.417-2.671-3.417a2.83 2.83 0 0 0-2.664 1.878 3.253 3.253 0 0 0-.177 1.236v6.7H9.416c.009-2.058.04-9.654.009-11.9H12.7v1.328a.5.5 0 0 0 .92.272 3.769 3.769 0 0 1 3.443-1.9c2.819 0 4.436 1.934 4.436 5.305Z" />
-            </svg>
-          </a>
-        </li>
         <li>
           <a href="https://api.whatsapp.com/send?phone=0618534190">
             <svg viewBox="0 0 24 24">
