add .editorconfig file + modify background + add github link

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
           </a>
         </li>
         <li>
+          <a href="https://github.com/Nihylin">
+            <img src="img/github.svg" alt="Logo de Github">
+            <p>Github</p>
+          </a>
+        </li>
+        <li>
           <a href="https://www.linkedin.com/in/philippewanquetin/">
             <img src="img/linkedin.svg" alt="Logo de LinkedIn">
             <p>LinkedIn</p>
