change favicon type value

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Philippe Wanquetin (@nihylin) - Informations de contact</title>
   <meta name="keywords" content="HTML, CSS">
   <meta name="author" content="Philippe Wanquetin">
-  <link rel="icon" href="./img/favicon.ico" type="image/gif">
+  <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
