--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;900&family=Montserrat:wght@100;300;400;500;600;700;900&display=swap" rel="stylesheet">
+  <meta name="google-site-verification" content="tdx4FZKHiIz-pq6bxgUgzUrf1TQKCnB09NXzuJwB8dU" />
+</head>
 
 <body>
   <main>
